ITR-13 Implemented design, refactored, fixed issues
