# src/controllers/charactersController.js
@@ -4,20 +4,54 @@ const { DATA_PROPERTIES } = require('../models/Character');
 const responses = require('../responses');
 const validationHelper = require('../helpers/userInputValidationHelper');
 
-function omitAvatarUrlPropertyIfNull(characterJSON) { // TODO: remove when dredd will fully support OpenAPI 3 (nullable properties)
-  if (characterJSON.avatarUrl === null) {
-    return _.omit(characterJSON, ['avatarUrl']);
+function omitAvatarPropertyIfNull(characterJSON) { // TODO: remove when dredd will fully support OpenAPI 3 (nullable properties)
+  if (characterJSON.avatarId === null) {
+    return _.omit(characterJSON, ['avatarId']);
   }
 
   return characterJSON;
 }
 
 function formatCharacterInstanceForOutput(characterInstance) {
-  return omitAvatarUrlPropertyIfNull(characterInstance.toJSON());
+  return omitAvatarPropertyIfNull(characterInstance.toJSON());
+}
+
+const DEFAULT_LIMIT = 10;
+const DEFAULT_OFFSET = 0;
+
+function getLimitArgumentFromRequest(req) {
+  if (!_.has(req, 'query.limit')) {
+    return DEFAULT_LIMIT;
+  }
+
+  const limit = parseInt(req.query.limit, 10);
+
+  if (!validationHelper.isLimitValid(limit)) {
+    return DEFAULT_LIMIT;
+  }
+
+  return limit;
+}
+
+function getOffsetArgumentFromRequest(req) {
+  if (!_.has(req, 'query.offset')) {
+    return DEFAULT_OFFSET;
+  }
+
+  const offset = parseInt(req.query.offset, 10);
+
+  if (!validationHelper.isOffsetValid(offset)) {
+    return DEFAULT_OFFSET;
+  }
+
+  return offset;
 }
 
 module.exports.index = async function index(req, res) {
-  const characters = await models.Character.scope('withAuthor').findAll();
+  const limit = getLimitArgumentFromRequest(req);
+  const offset = getOffsetArgumentFromRequest(req);
+
+  const characters = await models.Character.scope('withAuthor').findAll({ limit, offset });
   const json = characters.map((character) => {
     const characterJSON = formatCharacterInstanceForOutput(character);
 
@@ -41,11 +75,11 @@ module.exports.view = async function view(req, res) {
 };
 
 module.exports.new = async function createNewCharacter(req, res) {
-  const { name, avatarUrl, data } = req.body;
+  const { name, avatarId, data } = req.body;
   const pickedData = _.pick(data, DATA_PROPERTIES);
 
   const isUserInputValid = validationHelper.isCharacterNameValid(name)
-    && validationHelper.isAvatarUrlValid(avatarUrl)
+    && validationHelper.isAvatarValid(avatarId)
     && validationHelper.isCharacterDataValid(pickedData);
 
   if (!isUserInputValid) {
@@ -54,7 +88,7 @@ module.exports.new = async function createNewCharacter(req, res) {
 
   const newCharacter = await models.Character.create({
     name,
-    avatarUrl,
+    avatarId,
     data: pickedData,
     authorId: req.user.id,
   });
@@ -66,10 +100,10 @@ module.exports.new = async function createNewCharacter(req, res) {
 
 module.exports.update = async function update(req, res) {
   const { characterId } = req.params;
-  const { name, avatarUrl, data } = req.body;
+  const { name, avatarId, data } = req.body;
 
   const isUserInputValid = (!_.has(req.body, 'name') || validationHelper.isCharacterNameValid(name))
-    && (!_.has(req.body, 'avatarUrl') || validationHelper.isAvatarUrlValid(avatarUrl))
+    && (!_.has(req.body, 'avatarId') || validationHelper.isAvatarValid(avatarId))
     && (!_.has(req.body, 'data') || _.isPlainObject(data));
 
   if (!isUserInputValid) {
@@ -101,8 +135,8 @@ module.exports.update = async function update(req, res) {
     character.set('name', name);
   }
 
-  if (_.has(req.body, 'avatarUrl')) {
-    character.set('avatarUrl', avatarUrl);
+  if (_.has(req.body, 'avatarId')) {
+    character.set('avatarId', avatarId);
   }
 
   const updatedCharacter = await character.save();
